# agave_chem

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  gold_reactions.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
agave_chem/: __init__.py  core.py  main.py  scoring.py  template_initializiation.py
agave_chem/datafiles/: reaction_classes.json  smirks_patterns.json  smirks_with_superclass.json
agave_chem/datafiles/albert_model/: config.json  model.safetensors
agave_chem/datafiles/smirks_patterns/: reaction_classes.json  smirks_patterns.json  smirks_patterns_with_children.json
agave_chem/mappers/: data_classes.py  reaction_mapper.py  types.py
agave_chem/mappers/identical_fragments/: identical_fragment_mapper.py
agave_chem/mappers/mcs/: algorithms.py  mcs_mapper.py  reaction.py
agave_chem/mappers/neural/: albert_mapper.py  constants.py  model.py  neural_mapper.py  tokenizer.py
agave_chem/mappers/template/: template_initialization.py  template_mapper.py  types.py
agave_chem/scoring/: scoring.py
agave_chem/utils/: chem_utils.py  constants.py  graph_utils.py  logging_config.py  symmetry_classes.py
docs/: getting_started.md  index.md  installation.md  reference.md
examples/: example_notebook.ipynb
getting_started/: index.html
installation/: index.html
manuscript/: manuscript.tex
model_training/: albert_mapper_supervised_training.py  albert_mapper_training.py  albert_mapper_unuspervised_training.py
model_training/scripts/: layer_head_identification.py  supervised_training.py  unsupervised_training.py
reference/: index.html
scripts/: generate_child_smarts_from_smirks.py
search/: search_index.json
tests/: test_identical_fragment_mapper.py
tests/integration/: test_mcs_mapper_integration.py  test_template_mapper_integration.py  uspto_1k_reactions.txt
tests/unit/: test_graph_utils.py  test_graph_utils_unit.py  test_identical_fragment_mapper.py  test_mcs_mapper.py  test_mcs_mapper_unit.py
training_scripts/: albert_mapper.py  albert_mapper_inference.py  albert_mapper_supervised_training.py  albert_mapper_training.py
training_scripts/utils/: chem_utils.py  constants.py
workflows/benchmarking/: benchmark.py  gold_reactions_filtered.txt  localmapper_gold_reactions_filtered_results.txt  rxnmapper_gold_reactions_filtered_results.txt
workflows/model_training_scripts/: albert_mapper_supervised_training.py  albert_mapper_unuspervised_training.py  layer_head_identification.py  supervised_training.py  unsupervised_training.py
workflows/template_processing/: generate_child_smarts_from_smirks.py  generate_nucleophilic_substitution_reactions.py
workflows/training_data_generation/: map_reactions.py
(+8 files in other folders)
