[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agave_chem"
version = "0.0.1"
authors = [
    {name = "De Novo Chem Team", email = "carson.britt@denovochem.com"}
]
description = "Reaction classification and atom-mapping"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/denovochem/agave_chem"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
agave_chem = ["datafiles/*.json", "datafiles/albert_model/*.json", "datafiles/albert_model/*.safetensors"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
ignore_missing_imports = true